adjust crown max height to stop overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,7 +41,7 @@ color: rgb(255, 255, 255);
 
 #game-logo {
     width: 100%;
-    max-height: 45%;
+    max-height: 300px;
 }
 
 #intro-lore {
